syntax = "proto3";
package excelgeneratedclient;

option go_package = "./;excelpb";

service ExcelService {
  rpc ExcelSession(stream ExcelSessionReq) returns (stream ExcelSessionResp) {};
}

message ExcelOpen {
  string id = 1;
  string name = 2;
  string fileName = 3;
  string fileType = 4;
  bytes file = 5;
  string openAs = 6;
  string isHeader = 7;
}

message ReadData {
  int32 from = 1;
  int32 to = 2;
}

message ExcelSessionReq {
  string actionName = 1;
  repeated Dictionary excelReq = 2;
}

message ExcelSessionResp {
  string message = 1;
  bool status = 2;
  repeated Dictionary data = 3;
  string set = 4;
  string logMessage = 5;
}

message Dictionary {
  string key = 1;
  string value = 2;
  bytes byteValue = 3;
  repeated string listValue = 4;
}

message ExcelReadResp {
  repeated string rows = 1;
}

message ExcelOpenResp {
  int32 countRow = 1;
}

